<resources>
    <string name="app_name">암기신</string>
    <string name="app_text_empty">-</string>
    <string name="app_permission_request">앱의 기능을 사용하기 위해서는 권한이 필요합니다.</string>
    <string name="app_google_tts_request_message">Google TTS 설치가 필요합니다.</string>

    <string name="app_content_description_item_reorder">아이템 이동</string>
    <string name="app_service_stop">잠시 중단된 서비스입니다.</string>
    <string name="app_back_press_finish">뒤로가기 버튼을 한번 더 누르면 종료됩니다.</string>
    <string name="app_copy_complete">복사 완료</string>

    <string name="app_data_load_progress_message">데이터를 로딩중입니다.</string>
    <string name="app_phone_number_title">전화번호</string>

    <string name="app_file_name_format">%s (%s)%s</string>
    <string name="app_file_save_data_none">저장할 데이터가 없습니다.</string>
    <string name="app_file_load_data_title">데이터 추가</string>
    <string name="app_backup_save_message">데이터를 저장중입니다.</string>

    <string name="app_dialog_ok">확인</string>
    <string name="app_dialog_cancel">취소</string>
    <string name="app_dialog_yes">예</string>
    <string name="app_dialog_no">아니요</string>
    <string name="app_dialog_close">닫기</string>
    <string name="app_dialog_all_selection_flag">전체선택/해제</string>
    <string name="app_dialog_check_empty">아이템을 선택해주세요.</string>

    <string name="app_toolBar_menu_add">추가</string>
    <string name="app_toolBar_menu_copy">복사</string>
    <string name="app_toolBar_menu_edit">수정</string>
    <string name="app_toolBar_menu_delete">삭제</string>
    <string name="app_toolBar_menu_sort">정렬</string>
    <string name="app_toolBar_menu_search">검색</string>
    <string name="app_toolBar_menu_select_all">전체 선택</string>
    <string name="app_toolBar_menu_share_data_download">공유 자료</string>
    <string name="app_toolBar_menu_file_save">파일 저장</string>
    <string name="app_toolBar_menu_file_load">파일 열기</string>

    <string name="app_toolBar_selection_info">%d / %d 선택</string>
    <string name="app_toolBar_menu_sort_data_empty">정렬할 데이터가 없습니다.</string>
    <string name="app_toolBar_menu_search_data_empty">검색할 데이터가 없습니다.</string>
    <string name="app_toolBar_menu_share_list_progress_dialog_message">공유 리스트를 로딩중입니다.</string>
    <string name="app_toolBar_menu_share_list_choice_dialog_title">공유 리스트</string>
    <string name="app_toolBar_menu_share_data_progress_dialog_message_format">공유 데이터를 로딩중입니다.\n(%s)</string>
    <string name="app_toolBar_menu_share_data_download_success_message_format">다운로드 완료\n(%s)</string>
    <string name="app_toolBar_menu_file_save_progress_message">파일을 저장중입니다.</string>
    <string name="app_toolBar_menu_file_save_error_title_overlap">아이템 이름 중복은 불가능합니다. (%s)</string>
    <string name="app_toolBar_menu_file_save_complete">파일 저장 완료</string>
    <string name="app_toolBar_menu_file_load_progress_message">파일을 로딩중입니다.</string>
    <string name="app_toolBar_menu_file_load_complete">파일 열기 완료</string>
    <string name="app_toolBar_menu_file_load_data_check_none">데이터를 선택해주세요.</string>

    <string name="app_item_empty">아이템이 없습니다.</string>
    <string name="app_item_input_empty">입력값이 필요합니다.</string>
    <string name="app_item_edit_not_allowed">편집이 불가능한 데이터입니다.</string>
    <string name="app_item_edit_not_allowed_init_message_format">%s 데이터는 편집 내용이 저장되지 않습니다. 편집 적용을 원하시면 아이템 복사 후에 사용해주세요.</string>
    <string name="app_item_edit_selection_empty">수정할 아이템을 선택해주세요.</string>
    <string name="app_item_edit_selection_one_request">수정할 아이템을 1개만 선택해주세요.</string>
    <string name="app_item_copy_selection_empty">복사할 아이템을 선택해주세요.</string>
    <string name="app_item_copy_selection_one_request">복사할 아이템을 1개만 선택해주세요.</string>
    <string name="app_item_copy_not_found">copy error (idx -1)</string>
    <string name="app_item_copy_title_format">%s 복사</string>
    <string name="app_item_delete_selection_empty">삭제할 아이템을 선택해주세요.</string>
    <string name="app_item_delete_selection_not_allowed">삭제가 불가능한 아이템이 있습니다. (%s) </string>
    <string name="app_item_delete_check_message">%d개 아이템을 영구적으로 삭제합니다.</string>
    <string name="app_item_sort_empty">정렬할 아이템이 없습니다.</string>
    <string name="app_item_sort_check_message">아이템 순서가 변경되었습니다. 적용하겠습니까?</string>
    <string name="app_item_search_empty">검색 결과가 없습니다.</string>

    <string name="app_item_add_position_title">추가 순서</string>
    <string name="app_item_add_position_first">처음</string>
    <string name="app_item_add_position_last">마지막</string>

    <string name="app_sort_toolBar_title">정렬 (%s)</string>
    <string name="app_search_toolBar_menu_search">검색</string>
    <string name="app_search_toolBar_hint">검색 (%s)</string>

    <string name="home_network_not_connected">네트워크가 불안정합니다.</string>
    <string name="home_app_version_null">app version null</string>
    <string name="home_market_version_null">market version null</string>
    <string name="home_version_check_error">version check error</string>
    <string name="home_version_update_alert_dialog_title">업데이트 요청</string>
    <string name="home_version_update_alert_dialog_message_format">현재버전 : %s\n최신버전 : %s</string>
    <string name="home_version_update_alert_dialog_button_ok">업데이트</string>

    <string name="main_sort_toolBar_menu_name">이름 순</string>
    <string name="main_sort_toolBar_menu_name_reverse">이름 역순</string>

    <string name="test_toolBar_title">테스트</string>
    <string name="test_toolBar_title_input_empty">제목 입력값이 필요합니다.</string>
    <string name="test_toolBar_menu_test_check_init">채점 초기화</string>
    <string name="test_item_test_check_init_selection_empty">초기화할 아이템을 선택해주세요.</string>

    <string name="test_item_copy_position_data_empty">복사 가능한 위치가 없습니다</string>
    <string name="test_item_copy_position_dialog_title">복사 위치</string>
    <string name="test_item_copy_position_dialog_check_empty">복사 위치를 선택해주세요</string>
    <string name="test_item_copy_complete_message_format_info_separator">,&#160;</string>
    <string name="test_item_copy_complete_message_format">복사 완료 (%s)</string>

    <string name="test_item_edit_dialog_title_add">아이템 추가</string>
    <string name="test_item_edit_dialog_title_edit">아이템 수정</string>
    <string name="test_item_edit_dialog_problem_hint">문제</string>
    <string name="test_item_edit_dialog_answer_hint">정답</string>

    <string name="test_item_test_dialog_answer_hint">정답 입력</string>
    <string name="test_item_test_dialog_answer_view">정답 보기</string>
    <string name="test_item_test_dialog_pass">정답입니다.</string>
    <string name="test_item_test_dialog_wrong">오답입니다.</string>
    <string name="test_item_test_dialog_wrong_space">오답입니다. (공백을 확인해주세요)</string>
    <string name="test_item_test_dialog_wrong_case_sensitive">오답입니다. (대소문자를 확인해주세요)</string>

    <string name="test_item_test_dialog_pre_limit">처음 문제입니다.</string>
    <string name="test_item_test_dialog_next_limit">마지막 문제입니다.</string>

    <string name="test_item_test_dialog_voice_speech_message">음성 인식 중</string>
    <string name="test_item_test_dialog_voice_error_format">Voice onError (%d)</string>
    <string name="test_item_test_dialog_voice_result_success">입력 완료</string>

    <string name="test_item_test_dialog_settings_blank_delete">공백 제거</string>
    <string name="test_item_test_dialog_settings_upper_case">대문자 변경</string>
    <string name="test_item_test_dialog_settings_lower_case">소문자 변경</string>
    <string name="test_item_test_dialog_settings_phone_number_format">전화번호 형식 번경</string>
    <string name="test_item_test_dialog_settings_phone_number_format_error_format">전화번호 형식으로 변경이 불가능합니다. (%s)</string>

    <string name="test_sort_toolBar_menu_name">이름 순</string>
    <string name="test_sort_toolBar_menu_name_reverse">이름 역순</string>
    <string name="test_sort_toolBar_menu_test_check">채점 순</string>
    <string name="test_sort_toolBar_menu_test_check_reverse">채점 역순</string>
    <string name="test_sort_toolBar_menu_random">랜덤</string>

    <string name="imageView_contentDescription_test_dialog_pre">이전문제</string>
    <string name="imageView_contentDescription_test_dialog_next">다음문제</string>
    <string name="imageView_contentDescription_test_dialog_speak">음성출력</string>
    <string name="imageView_contentDescription_test_dialog_mic">음성입력</string>
    <string name="imageView_contentDescription_test_dialog_settings">설정</string>
    <string name="contentDescription_menu_upload_">상단이동</string>

    <string name="admob_app_id">ca-app-pub-9781828508992303~2035825882</string>
    <string name="admob_main_banner_id">ca-app-pub-9781828508992303/2383206015</string>
    <string name="admob_test_banner_id">ca-app-pub-9781828508992303/3411895110</string>

</resources>
