<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dy.memorygod.activity.TestActivity">

    <item
        android:id="@+id/test_toolBar_menu_add"
        android:title="@string/app_toolBar_menu_add"
        app:showAsAction="never" />

    <item
        android:id="@+id/test_toolBar_menu_copy"
        android:title="@string/app_toolBar_menu_copy"
        app:showAsAction="never" />

    <item
        android:id="@+id/test_toolBar_menu_edit"
        android:title="@string/app_toolBar_menu_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/test_toolBar_menu_delete"
        android:title="@string/app_toolBar_menu_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/test_toolBar_menu_sort"
        android:title="@string/app_toolBar_menu_sort"
        app:showAsAction="never" />

    <item
        android:id="@+id/test_toolBar_menu_search"
        android:title="@string/app_toolBar_menu_search"
        app:showAsAction="never" />

    <item
        android:id="@+id/test_toolBar_menu_select_all"
        android:title="@string/app_toolBar_menu_select_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/test_toolBar_menu_test_check_init"
        android:title="@string/test_toolBar_menu_test_check_init"
        app:showAsAction="never" />

</menu>