<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_test_dialog_edit_problem_speak"
                android:layout_width="@dimen/test_dialog_option_image_size"
                android:layout_height="@dimen/test_dialog_option_image_size"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/imageView_contentDescription_test_dialog_speak"
                android:src="@drawable/ic_test_dialog_speak" />

            <EditText
                android:id="@+id/editText_test_item_edit_problem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/test_item_edit_dialog_problem_hint"
                android:importantForAutofill="no"
                android:inputType="text" />

            <ImageView
                android:id="@+id/imageView_test_dialog_edit_problem_mic"
                android:layout_width="@dimen/test_dialog_option_image_size"
                android:layout_height="@dimen/test_dialog_option_image_size"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/imageView_contentDescription_test_dialog_speak"
                android:src="@drawable/ic_test_dialog_mic" />

            <Space
                android:layout_width="@dimen/test_dialog_option_image_space"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imageView_test_dialog_edit_problem_settings"
                android:layout_width="@dimen/test_dialog_option_image_size"
                android:layout_height="@dimen/test_dialog_option_image_size"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/imageView_contentDescription_test_dialog_settings"
                android:src="@drawable/ic_test_dialog_settings" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_test_dialog_edit_answer_speak"
                android:layout_width="@dimen/test_dialog_option_image_size"
                android:layout_height="@dimen/test_dialog_option_image_size"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/imageView_contentDescription_test_dialog_speak"
                android:src="@drawable/ic_test_dialog_speak" />

            <EditText
                android:id="@+id/editText_test_item_edit_answer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/test_item_edit_dialog_answer_hint"
                android:importantForAutofill="no"
                android:inputType="text" />

            <ImageView
                android:id="@+id/imageView_test_dialog_edit_answer_mic"
                android:layout_width="@dimen/test_dialog_option_image_size"
                android:layout_height="@dimen/test_dialog_option_image_size"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/imageView_contentDescription_test_dialog_speak"
                android:src="@drawable/ic_test_dialog_mic" />

            <Space
                android:layout_width="@dimen/test_dialog_option_image_space"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imageView_test_dialog_edit_answer_settings"
                android:layout_width="@dimen/test_dialog_option_image_size"
                android:layout_height="@dimen/test_dialog_option_image_size"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/imageView_contentDescription_test_dialog_settings"
                android:src="@drawable/ic_test_dialog_settings" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>